# OpenGL-Starter

./: .gitignore  CMakeLists.txt  README.md  build.sh  rebuild.sh
.cache/clangd/index/: core.cpp.C9F2AC72B03E4702.idx  main.cpp.11264C7645129810.idx
include/: core.hpp
shader/: vertex.glsl
src/: core.cpp  main.cpp
